# This file is placed in the Public Domain.


[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "tobotot"
version = "1"
authors = [
    {name = "Bart Thate", email = "bthate@dds.nl" },
]
description = "bot in reverse !"
readme = "README.rst"
license = "Unlicense"
classifiers=[
    'Development Status :: 3 - Alpha',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3',
    'Topic :: Utilities'
]


[project.urls]
"home" = "https://pypi.org/project/tobotot"
"bugs" = "https://github.com/botlibX/tobotot/issues"
"source" = "https://github.com/botlibX/tobotot"


[tool.setuptools]
packages = [
    'tobot',
    'tobot.modules',
    'tobot.network',
    'tobot.network.html'
]
include-package-data = true


[tool.setuptools.package-data]
"tobot.network.html" = ["*"]
